CAUSEWAY-2485: resurrects the customui for demo app